--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-router-dom": "^7.6.3",
+    "reactflow": "^11.11.4",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -32,6 +34,6 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
-    "vite": "^7.0.3"
+    "vite": "^5.2.8"
   }
 }
